# qssmonitor

./: Cargo.toml
db/migrations/: 01_migration.sql
src/: core.rs  endpoints.rs  main.rs
src/aggregator/: aggregator.rs  aggregator_object.rs  mod.rs  session.rs  streak.rs
src/aggregator/streak_extension_strategy/: browser_inclusive_streak_extension_strategy.rs  mod.rs  streak_action.rs  website_name_detection_strategy.rs
src/data/: digest.rs  mod.rs  report.rs  sample.rs  sample_builder.rs  streak.rs
src/data/db_types/: mod.rs  session_row.rs  streak_row.rs
src/data/digest/: builder.rs  digest.rs  digest_object.rs  mod.rs  productivity_data.rs
src/data/digest/productivity_computation/: complete_productivity_computation.rs  mod.rs  process_named_productivity_computation.rs
src/data/streak/: digest.rs  mod.rs  streak.rs  streak_object.rs
src/data/website_detection/: browser_data.rs  detection_criteria.rs  detection_data.rs  detection_discriminant.rs  mod.rs
src/data/wrappers/: duration_wrapper.rs  mod.rs  process_name.rs  website_name.rs  window_name.rs
src/database/: database_access.rs  init.rs  migrations.rs  mod.rs  sqlite_database_access.rs
src/default_config/: default_config_visitor.rs  mod.rs  non_productive_websites_config.rs  qssmonitor_config.rs
src/filesystem/: config_initialization.rs  mod.rs  paths.rs
src/logging/: initialization.rs
src/messages/: mod.rs
src/process/: mod.rs  process_name.rs  requester.rs
src/x/: mod.rs  requester.rs  window_name.rs
