[package]
name = "qssmonitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
configgen-rs = "0.1.3"
home = "0.5.5"
libxdo-sys = "0.11.0"
procfs = "0.15.1"
serde = { version = "1.0.174", features = ["derive"] }
serde_with = {version = "3.2.0", features = ["chrono_0_4"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
x11 = "2.21.0"
