[package]
name = "qssmonitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
configgen-rs = "0.1.3"
home = "0.5.5"
itertools = "0.11.0"
libxdo-sys = "0.11.0"
procfs = "0.15.1"
serde = { version = "1.0.174", features = ["derive"] }
serde_with = {version = "3.2.0", features = ["chrono_0_4"]}
toml = "0.7.8"
tracing = { version = "0.1.37", features = [ "log" ] }
tracing-subscriber = "0.3.17"
x11 = "2.21.0"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.24"
clap = { version = "4.3.3", features = ["derive"]}
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
axum = "0.6.20"
tracing-futures = {version = "0.2.5", features = ["tokio", "tokio-executor", "futures-03"]}
serde_json = "1.0.107"

[dev-dependencies]
test-case = "3.1.0"
